--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for App-ZofCMS-Plugin-DBIPPT
 
+0.0104  September 21, 2009
+        Fixed a bug that tried to convert times that were "undef" or empty strings
+
 0.0103  August 1, 2009
         Had to reupload due to PAUSE breaking on me
 
