--- a/Changes
+++ b/Changes
@@ -1,14 +1,18 @@
 Revision history for App-ZofCMS-Plugin-DBIPPT
 
-0.0104  September 21, 2009
-        Fixed a bug that tried to convert times that were "undef" or empty strings
+0.0105  2013-11-07
+        - Minor fixes to comply with specs and Kwalitee game
 
-0.0103  August 1, 2009
-        Had to reupload due to PAUSE breaking on me
+0.0104  2009-09-21
+        - Fixed a bug that tried to convert times that were "undef"
+          or empty strings
 
-0.0102  July 31, 2009
-        Added missing part of docs
+0.0103  2009-07-01
+        - Had to reupload due to PAUSE breaking on me
 
-0.0101  July 30, 2009
-        First version, released on an unsuspecting world.
+0.0102  2009-07-31
+        - Added missing part of docs
+
+0.0101  2009-07-30
+        - First version, released on an unsuspecting world.
 
